// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpotlightModal/> should cancel previous request when tab is switched and not notify on cancellation error 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
      "reason": Cancel {
        "message": undefined,
      },
    },
    "data": "{"search":"foo","filters":""}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "cursor": undefined,
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/tickets/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"search":"foo"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "cursor": undefined,
      "order_by": "_score:desc",
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/customers/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should fetch customers on enter keypress 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"search":"foo2"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "cursor": undefined,
      "order_by": "_score:desc",
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/customers/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should fetch items for the search term on previous tab if search was not triggered for new query 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
      "reason": Cancel {
        "message": undefined,
      },
    },
    "data": "{"search":"foo","filters":""}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "cursor": undefined,
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/tickets/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"search":"foo"}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "cursor": undefined,
      "order_by": "_score:desc",
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/customers/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should fetch tickets on enter keypress from the search endpoint 1`] = `
[
  {
    "cancelToken": CancelToken {
      "promise": Promise {},
    },
    "data": "{"search":"foo","filters":""}",
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "params": {
      "cursor": undefined,
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "url": "/api/tickets/search",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
]
`;

exports[`<SpotlightModal/> should render with tickets tab as default 1`] = `
<div
  aria-describedby="modal-mocked-desc"
  aria-labelledby="modal-mocked-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-mocked"
            name="input-text-mocked"
            placeholder="Search..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-mocked-desc"
      >
        <div
          class="wrapper"
        >
          <div
            class="title"
          >
            No recent results
          </div>
          <div
            class="body"
          >
            Try searching for a ticket or customer.
            <button
              class="advancedSearchCta"
            >
              Use advanced search
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper footer cleanSearchFooter"
      >
        <div
          class="navigationShortcutWrapper"
        >
          <div
            class="wrapper navigationShortcut"
          >
            ↑↓ Select
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ↩ Open
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ctrl + ↩ Open in a new tab
          </div>
        </div>
        <button
          aria-disabled="false"
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic advancedShortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic advancedShortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should reset search after closing and end previous searchRank scenario 1`] = `
<div
  aria-describedby="modal-mocked-desc"
  aria-labelledby="modal-mocked-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-mocked"
            name="input-text-mocked"
            placeholder="Search..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-mocked-desc"
      >
        <div
          class="wrapper"
        >
          <div
            class="title"
          >
            No recent results
          </div>
          <div
            class="body"
          >
            Try searching for a ticket or customer.
            <button
              class="advancedSearchCta"
            >
              Use advanced search
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper footer cleanSearchFooter"
      >
        <div
          class="navigationShortcutWrapper"
        >
          <div
            class="wrapper navigationShortcut"
          >
            ↑↓ Select
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ↩ Open
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ctrl + ↩ Open in a new tab
          </div>
        </div>
        <button
          aria-disabled="false"
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic advancedShortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic advancedShortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should set customers tab on click 1`] = `
<div
  aria-describedby="modal-mocked-desc"
  aria-labelledby="modal-mocked-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-mocked"
            name="input-text-mocked"
            placeholder="Search..."
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
          <div
            class="tab activeTab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-mocked-desc"
      >
        <div
          class="wrapper"
        >
          <div
            class="title"
          >
            No recent results
          </div>
          <div
            class="body"
          >
            Try searching for a ticket or customer.
            <button
              class="advancedSearchCta"
            >
              Use advanced search
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper footer cleanSearchFooter"
      >
        <div
          class="navigationShortcutWrapper"
        >
          <div
            class="wrapper navigationShortcut"
          >
            ↑↓ Select
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ↩ Open
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ctrl + ↩ Open in a new tab
          </div>
        </div>
        <button
          aria-disabled="false"
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic advancedShortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic advancedShortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should show SpotlightLoader component while results are fetched 1`] = `
<div
  aria-describedby="modal-mocked-desc"
  aria-labelledby="modal-mocked-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-mocked"
            name="input-text-mocked"
            placeholder="Search..."
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-mocked-desc"
      >
        <div>
          SpotlightLoader
        </div>
      </div>
      <div
        class="wrapper footer"
      >
        <div
          class="navigationShortcutWrapper"
        >
          <div
            class="wrapper navigationShortcut"
          >
            ↑↓ Select
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ↩ Open
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ctrl + ↩ Open in a new tab
          </div>
        </div>
        <button
          aria-disabled="false"
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic advancedShortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic advancedShortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SpotlightModal/> should show SpotlightNoResults component when no results are available  1`] = `
<div
  aria-describedby="modal-mocked-desc"
  aria-labelledby="modal-mocked-title"
  aria-modal="true"
  class="modal spotlightModal default open"
  role="dialog"
>
  <div
    class="dialog large scrollableDialog"
  >
    <div
      class="modalContent scrollableContent default spotlightModalContent"
    >
      <div
        class="component searchInput"
      >
        <div
          class="wrapper isFocused input textInput shortcuts-enable"
        >
          <span
            class="prefix"
          >
            <i
              class="material-icons icon"
            >
              search
            </i>
          </span>
          <input
            class="input"
            id="input-text-mocked"
            name="input-text-mocked"
            placeholder="Search..."
            type="text"
            value="foo"
          />
        </div>
      </div>
      <div
        class="container tabNavigator"
      >
        <div
          class="tabContainer"
        >
          <div
            class="tab activeTab"
            tabindex="1"
          >
            <span
              class="tabLabel"
            >
              Tickets
            </span>
          </div>
          <div
            class="tab"
            tabindex="2"
          >
            <span
              class="tabLabel"
            >
              Customers
            </span>
          </div>
        </div>
        <div
          class="activeIndicator"
          style="width: 0px; left: 0px;"
        />
      </div>
      <div
        class="wrapper scrollable modalBody"
        id="modal-mocked-desc"
      >
        <div
          class="wrapper"
        >
          <div
            class="title"
          >
            No results
          </div>
          <div
            class="body"
          >
            You may want to try using different keywords or check for typos.
            <button
              class="advancedSearchCta"
            >
              Use advanced search
            </button>
          </div>
        </div>
      </div>
      <div
        class="wrapper footer"
      >
        <div
          class="navigationShortcutWrapper"
        >
          <div
            class="wrapper navigationShortcut"
          >
            ↑↓ Select
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ↩ Open
          </div>
          <div
            class="wrapper navigationShortcut"
          >
            ctrl + ↩ Open in a new tab
          </div>
        </div>
        <button
          aria-disabled="false"
          class="wrapper ghost secondary small"
          type="button"
        >
          <span>
            Advanced Search
          </span>
          <div
            class="wrapper classic advancedShortcut"
          >
            ⇧
          </div>
          <div
            class="wrapper classic advancedShortcut"
          >
            ↩
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
